# Infer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  debug_tensor.py  example.py  example_bert.py  setup.py  test.py  test_gpt_sovits.py
include/: Inferop.hpp  kvcache.hpp  memorypool.hpp  model.hpp  operator.hpp  opfactory.hpp  opregistry.hpp  tensor.hpp  unifiedOp.hpp
include/operators/: Inferop.hpp  add.hpp  add_rms.hpp  embedding.hpp  flashattn.hpp  matmul.hpp  mul.hpp  operator.hpp  opfactory.hpp  opregistry.hpp  relu.hpp  rope.hpp  silu.hpp  softmax.hpp
infer/: config.py  model.py  sampling_params.py
infer/engine/: block_mannager.py  kvcache_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
infer/models/: Bert.py
infer/ops/: CustomOp.py  MLP.py  attention.py  embedding.py  norm.py  pool.py  rope.py  sampler.py
infer/utils/: weight_loader.py
infer_ops/: __init__.py
src/: bindings.cpp  kvcache.cc  main.cu
src/operators/add/: add.cu  add.hpp
src/operators/add_rms/: add_rms.cu
src/operators/embedding/: embedding.cu
src/operators/flashattn/: flashattn.cu  flashattn_decode.cu
src/operators/matmul/: matmul.cu  matmul.hpp
src/operators/mul/: mul.cu  mul.hpp
src/operators/relu/: relu.hpp
src/operators/rope/: rope.cu
src/operators/silu/: silu.cu  silu.hpp
src/operators/softmax/: softmax.cu
test/: cudaGraph_test.py  op.py  test_transformer.py  test_trition_kernel.py
